project(learningAC VERSION 0.0.1)


add_subdirectory(UTSnamespace)
add_subdirectory(IPCnamespace)
add_subdirectory(PIDnamespace)
add_subdirectory(MountNamespace)
add_subdirectory(UserNamespace)
add_subdirectory(NetNamespace)
add_subdirectory(pivot_root)
add_subdirectory(cgroup)
add_subdirectory(pid_clone)
add_subdirectory(unshare)
add_subdirectory(tar)
add_subdirectory(pack)
